--- a/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
+++ b/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
@@ -40,6 +40,14 @@
         android:layout_gravity="center"
         android:text="@string/cheat_button"/>
 
+    <TextView
+        android:id="@+id/cheat_count_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="15dp"
+        tools:text="# of Cheats"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
